<resources>
    <string name="app_name">Proyecto</string>

        <string-array name="ocupacion_array">
            <item>Seleccione su ocupación</item>
            <item>Estudiante</item>
            <item>Doctor</item>
            <item>Ingeniero</item>
            <item>Docente</item>
            <item>Abogado</item>
            <item>Artista</item>
        </string-array>
        <string name="close">Cerrar</string>
    <string name="user_name">Usuario</string>
    <string name="user_role">Gestión de Finanzas Personales</string>
    <string name="categorias">Categorías</string>
    <string name="informes">Informes</string>
    <string name="detalles_perfil">Detalles de perfil</string>
    <string name="privacidad">Privacidad</string>
    <string name="centro_soporte">Centro de soporte</string>
    <string name="terminos_condiciones">Términos y condiciones</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="profile_image">Imagen de perfil</string>

    <string-array name="periodos_array">
        <item>Semana</item>
        <item>Mes</item>
        <item>Año</item>
    </string-array>


    <string name="texto_privacidad">Esta es la política de privacidad de nuestra aplicación de finanzas. Aquí describimos cómo manejamos su información personal...</string>
    <string name="introduccion">Esta es la política de privacidad de nuestra aplicación de finanzas. Aquí describimos cómo manejamos su información personal...</string>
    <string name="recoleccion_datos">Recopilamos la información necesaria para proporcionar nuestros servicios, incluyendo datos personales, financieros y de contacto...</string>
    <string name="uso_informacion">Utilizamos su información para mejorar nuestros servicios, proporcionar soporte al cliente y cumplir con obligaciones legales...</string>
    <string name="compartir_informacion">No compartimos su información personal con terceros, excepto cuando sea necesario para cumplir con la ley o con su consentimiento...</string>
    <string name="seguridad">Implementamos medidas de seguridad para proteger su información contra accesos no autorizados, alteraciones o destrucción...</string>
    <string name="contacto">Si tiene alguna pregunta sobre nuestra política de privacidad, puede contactarnos en EasyFin@finanzasapp.com...</string>
   <string name="soporte_intro">Bienvenido al centro de soporte. Aquí puedes encontrar respuestas a preguntas frecuentes o ponerte en contacto con nuestro equipo de soporte.</string>
    <string name="faq">Preguntas Frecuentes</string>
    <string name="contact_support">Contactar Soporte</string>

    <string name="terminos_condiciones_texto">Aquí van los términos y condiciones...</string>



</resources>