<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E6E6"
    tools:context=".ConfiguracionActivity">

    <ImageButton
        android:id="@+id/btn_close"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/close"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bordes_images"
            android:contentDescription="@string/profile_image"
            android:src="@drawable/ic_profile_placeholder" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_profile"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/user_name"
            android:textColor="#4CAF50"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_user_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_user_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:text="@string/user_role"
            android:textColor="#8F8F8F"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="349dp"
        android:layout_height="470dp"
        android:background="@drawable/bg_rounded"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/btn_categorias"
            style="@style/MenuButton"
            android:layout_width="338dp"
            android:layout_height="46dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_categories"
            android:text="@string/categorias" />

        <Button
            android:id="@+id/btn_informes"
            style="@style/MenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_categorias"
            android:layout_marginTop="8dp"
            android:text="@string/informes"
            android:drawableLeft="@drawable/ic_reports" />

        <Button
            android:id="@+id/btn_detalles_perfil"
            style="@style/MenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_informes"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/ic_profile_details"
            android:text="@string/detalles_perfil" />

        <Button
            android:id="@+id/btn_privacidad"
            style="@style/MenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_detalles_perfil"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/ic_privacy"
            android:text="@string/privacidad" />

        <Button
            android:id="@+id/btn_centro_soporte"
            style="@style/MenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_privacidad"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/ic_support_center"
            android:text="@string/centro_soporte" />

        <Button
            android:id="@+id/btn_terminos_condiciones"
            style="@style/MenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_centro_soporte"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/ic_terms_conditions"
            android:text="@string/terminos_condiciones" />

        <Button
            android:id="@+id/btn_cerrar_sesion"
            style="@style/MenuButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_terminos_condiciones"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="30dp"
            android:drawableLeft="@drawable/ic_logout"
            android:text="@string/cerrar_sesion" />
    </RelativeLayout>

    <include
        android:id="@+id/include"
        layout="@layout/bar" />
</androidx.constraintlayout.widget.ConstraintLayout>
